# Sebastian

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  问题.md
alembic/: env.py
app/: __init__.py  main.py
bak/: agent_graphs.py  这两个文件被修改了.md
docs/: README.md  resume-project.md  代码注释导览.md  使用指南.md  前端开发进度与待办.md  可观测性与监控.md  合并对话与菜谱推荐-进度预览.md  后端开发进度与待办.md  数据闭环实施进度.md  测试与质量.md  设计文档.md  部署完整指南.md  问题.md  项目开发现状总览.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
scripts/: reset_data.py  run_pytest_conda.py  seed_happy_path_data.py  seed_inventory_test_data.py  verify_a2a_refactor.py
tests/: conftest.py  test_a2a_agent_card.py  test_a2a_tasks.py  test_agent_chat_api.py  test_agent_graphs.py  test_agent_queue_and_rate_limit.py  test_agent_task_cache.py  test_agent_tools_api.py  test_context_budget.py  test_conversation_api.py  test_health.py  test_health_agent_with_history.py  test_history_manager.py  test_inventory_api.py  test_inventory_batch_adjust.py  test_inventory_graph.py  test_inventory_only_recipe.py  test_inventory_tasks.py  test_inventory_tasks_api.py  test_mcp_api.py  test_mcp_integration_p25.py  test_meal_confirm_api.py  test_observability_trace.py  test_postgres_container_integration.py  test_postgres_inventory_repository.py  test_profile_api.py  test_readiness_mcp_dependency_integration.py  test_recipe_agent_service.py  test_router_a2a_dispatch.py  test_router_agent.py  test_search_agent_dedup.py  (+6 more)
(+150 files in other folders)
